Fixing spacing

--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -38,7 +38,7 @@
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 0.04em;
+    --nav-item-letter-spacing: 4%;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
     --nav-item-link-hover: var(--color-primary);
@@ -147,7 +147,7 @@ a[href]:active {
 
 .nav .nav-link {
     display: block;
-    padding: calc(1rem / 2) 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .nav .nav-link:hover {
